# SNP-genotyping

./: .gitignore  Cargo.toml
src/: ReadMe.txt  batch.sh  error.txt  idat_processing.rs  lib.rs  main.rs  output.txt
src/apply_normalisation/: mod.rs
src/stage1/: mod.rs
src/stage2/: mod.rs
src/stage3/: mod.rs
src/stage4/: mod.rs
src/stage5/: mod.rs
